# cthulhu-news

./: .dockerignore  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  architecture.md  docker-compose.yml  project.code-workspace  pyproject.toml
db/: .dockerignore  Dockerfile  etl.py  llm_summary.py  main.py  requirements.txt
drafts/: cthulhu_draft_0.ipynb  cthulhu_draft_1.ipynb  cthulhu_draft_2.ipynb  cthulhu_draft_3.ipynb
pg/pg-config/: postgresql.conf
pg/pg-scripts/: dbinit.sql
shared/: llm_utils.py  paths.py
web/: Dockerfile  db.py  db_utils.py  etl.py  llm_cthulhu.py  llm_cthulhu_logic.py  llm_cthulhu_new.py  llm_cthulhu_prompts.py  main.py  mapping.py  requirements.txt  webapp.py
web/static/: styles.css
web/static/js/: counter_effects.js  main.js  news_article.js  news_page.js
web/templates/: comments.html  news_article.html  news_main_page.html  news_page.html  reactions.html
