[tool.poetry]
name = "cthulhu-news"
version = "0.1.0"
description = "Cthulhu-inspired news"
authors = ["Mysterious Ben <datascience@tuta.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.0"
envparse = "^0.2.0"
logutil = {extras = ["loguru"], version = "^0.1.5"}
apscheduler = "^3.10.4"
httpx = "^0.25.2"
pymongo = "^4.6.1"
openai = "^1.3.8"
# qdrant-client = {extras = ["fastembed"], version = "^1.6.9"}
pillow = "^10.1.0"
python-multipart = "^0.0.6"
spacy = "^3.7.5"
loguru = "^0.7.2"
lxml = {extras = ["html-clean"], version = "^5.2.2"}
tenacity = "^9.0.0"

[tool.poetry.group.db.dependencies]
newspaper3k = "^0.2.8"

[tool.poetry.group.web.dependencies]
fastapi = "^0.104.1"
jinja2 = "^3.1.2"
aiosqlite = "^0.19.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
pytest = "^7.4.3"
mypy = "^1.7.1"
pre-commit = "^3.6.0"
ruff = "^0.5.3"

[tool.poetry.group.jupyter.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | \resources
    | .ipynb_checkpoints
    | __pycache__
    | _build
    | build
    | dist
    | \.venv
  )/
)
'''

[tool.pytest.ini_options]
markers = [
    "integration: integration testing (tests require valid credentials and can be slow)",
]
testpaths = [
    "tests",
]
